parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    AND
    AND_ASSIGN
    BLOCK_COMMENT
    COMA
    CONCA
    CONCAT
    DOSCOMA
    EQUAL
    GREATTHANEQUAL
    LCORCHETE
    LESSTHANEQUAL
    LLLAVE
    NEQUAL
    NOT
    NULL
    OR
    OR_ASSIGN
    PUNTO
    RCORCHETE
    RLLAVE
    XOR
    XOR_ASSIGN

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration
Rule 2     program -> listdeclaration
Rule 3     program -> arraydeclaration
Rule 4     program -> linkedlistdeclaration
Rule 5     program -> doublelinkedlistdeclaration
Rule 6     program -> stackdeclaration
Rule 7     program -> queuedeclaration
Rule 8     Type -> INT
Rule 9     Type -> BOOLEAN
Rule 10    Type -> STRING
Rule 11    Type -> SHORT
Rule 12    Type -> FLOAT
Rule 13    Type -> LONG
Rule 14    Type -> DOUBLE
Rule 15    Type -> CHAR
Rule 16    Type -> BYTE
Rule 17    Type -> OBJECT
Rule 18    Type -> arraydeclaration
Rule 19    Type -> empty
Rule 20    accessmodif -> PUBLIC
Rule 21    accessmodif -> PRIVATE
Rule 22    accessmodif -> PROTECTED
Rule 23    accessmodif -> DEFAULT
Rule 24    accessmodif -> empty
Rule 25    finalstatvar -> FINAL
Rule 26    finalstatvar -> STATIC
Rule 27    finalstatvar -> FINAL STATIC
Rule 28    finalstatvar -> empty
Rule 29    declaration -> accessmodif finalstatvar Type STRING endexpression
Rule 30    declaration -> accessmodif finalstatvar Type assign
Rule 31    listdeclaration -> accessmodif finalstatvar LIST GREATTHAN Type LESSTHAN STRING endexpression
Rule 32    listdeclaration -> accessmodif finalstatvar LIST GREATTHAN Type LESSTHAN listassign
Rule 33    listassign -> STRING EQUALS listexpression endexpression
Rule 34    listexpression -> NEW LIST GREATTHAN Type LESSTHAN LPAREN RPAREN
Rule 35    arraydeclaration -> accessmodif finalstatvar ARRAYLIST lessthandat Type greatthandat ESPACIO STRING endexpression
Rule 36    arraydeclaration -> accessmodif finalstatvar ARRAYLIST LESSTHAN Type GREATTHAN arrayassign
Rule 37    arrayassign -> STRING EQUALS arrayexpression endexpression
Rule 38    arrayexpression -> NEW ARRAYLIST LESSTHAN Type GREATTHAN LPAREN RPAREN
Rule 39    linkedlistdeclaration -> accessmodif finalstatvar LINKEDLIST LESSTHAN Type GREATTHAN STRING endexpression
Rule 40    linkedlistdeclaration -> accessmodif finalstatvar LINKEDLIST LESSTHAN Type GREATTHAN linkedlistassign
Rule 41    linkedlistassign -> STRING EQUALS linkedlistexpression endexpression
Rule 42    linkedlistexpression -> NEW LINKEDLIST LESSTHAN Type GREATTHAN LPAREN RPAREN
Rule 43    doublelinkedlistdeclaration -> accessmodif finalstatvar DOUBLELINKEDLIST LESSTHAN Type GREATTHAN STRING endexpression
Rule 44    doublelinkedlistdeclaration -> accessmodif finalstatvar DOUBLELINKEDLIST LESSTHAN Type GREATTHAN doublelinkedlistassign
Rule 45    doublelinkedlistassign -> STRING EQUALS doublelinkedlistexpression endexpression
Rule 46    doublelinkedlistexpression -> NEW DOUBLELINKEDLIST LESSTHAN Type GREATTHAN LPAREN RPAREN
Rule 47    stackdeclaration -> accessmodif finalstatvar STACK LESSTHAN Type GREATTHAN STRING endexpression
Rule 48    stackdeclaration -> accessmodif finalstatvar STACK LESSTHAN Type GREATTHAN stackassign
Rule 49    stackassign -> STRING EQUALS stackexpression endexpression
Rule 50    stackexpression -> NEW STACK GREATTHAN Type LESSTHAN LPAREN RPAREN
Rule 51    queuedeclaration -> accessmodif finalstatvar QUEUE GREATTHAN Type LESSTHAN STRING endexpression
Rule 52    queuedeclaration -> accessmodif finalstatvar QUEUE GREATTHAN Type LESSTHAN queueassign
Rule 53    queueassign -> STRING EQUALS queueexpression endexpression
Rule 54    queueexpression -> NEW QUEUE GREATTHAN Type LESSTHAN LPAREN RPAREN
Rule 55    assign -> STRING EQUALS expression endexpression
Rule 56    endexpression -> PUNTOCOMA
Rule 57    expression -> expression PLUS expression
Rule 58    expression -> expression MINUS expression
Rule 59    expression -> expression TIMES expression
Rule 60    expression -> expression DIVIDE expression
Rule 61    expression -> expression MOD expression
Rule 62    expression -> PLUSPLUS
Rule 63    expression -> MINUSMINUS
Rule 64    expression -> expression TIMESTIMES expression
Rule 65    expression -> TIMES_ASSIGN expression
Rule 66    expression -> MINUS_ASSIGN expression
Rule 67    expression -> PLUS_ASSIGN expression
Rule 68    expression -> DIVIDE_ASSIGN expression
Rule 69    expression -> MOD_ASSIGN expression
Rule 70    expression -> LPAREN expression RPAREN
Rule 71    expression -> INTEGER
Rule 72    expression -> empty
Rule 73    greatthandat -> GREATTHAN
Rule 74    lessthandat -> LESSTHAN
Rule 75    empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 
AND_ASSIGN           : 
ARRAYLIST            : 35 36 38
BLOCK_COMMENT        : 
BOOLEAN              : 9
BYTE                 : 16
CHAR                 : 15
COMA                 : 
CONCA                : 
CONCAT               : 
DEFAULT              : 23
DIVIDE               : 60
DIVIDE_ASSIGN        : 68
DOSCOMA              : 
DOUBLE               : 14
DOUBLELINKEDLIST     : 43 44 46
EQUAL                : 
EQUALS               : 33 37 41 45 49 53 55
ESPACIO              : 35
FINAL                : 25 27
FLOAT                : 12
GREATTHAN            : 31 32 34 36 38 39 40 42 43 44 46 47 48 50 51 52 54 73
GREATTHANEQUAL       : 
INT                  : 8
INTEGER              : 71
LCORCHETE            : 
LESSTHAN             : 31 32 34 36 38 39 40 42 43 44 46 47 48 50 51 52 54 74
LESSTHANEQUAL        : 
LINKEDLIST           : 39 40 42
LIST                 : 31 32 34
LLLAVE               : 
LONG                 : 13
LPAREN               : 34 38 42 46 50 54 70
MINUS                : 58
MINUSMINUS           : 63
MINUS_ASSIGN         : 66
MOD                  : 61
MOD_ASSIGN           : 69
NEQUAL               : 
NEW                  : 34 38 42 46 50 54
NOT                  : 
NULL                 : 
OBJECT               : 17
OR                   : 
OR_ASSIGN            : 
PLUS                 : 57
PLUSPLUS             : 62
PLUS_ASSIGN          : 67
PRIVATE              : 21
PROTECTED            : 22
PUBLIC               : 20
PUNTO                : 
PUNTOCOMA            : 56
QUEUE                : 51 52 54
RCORCHETE            : 
RLLAVE               : 
RPAREN               : 34 38 42 46 50 54 70
SHORT                : 11
STACK                : 47 48 50
STATIC               : 26 27
STRING               : 10 29 31 33 35 37 39 41 43 45 47 49 51 53 55
TIMES                : 59
TIMESTIMES           : 64
TIMES_ASSIGN         : 65
XOR                  : 
XOR_ASSIGN           : 
error                : 

Nonterminals, with rules where they appear

Type                 : 29 30 31 32 34 35 36 38 39 40 42 43 44 46 47 48 50 51 52 54
accessmodif          : 29 30 31 32 35 36 39 40 43 44 47 48 51 52
arrayassign          : 36
arraydeclaration     : 3 18
arrayexpression      : 37
assign               : 30
declaration          : 1
doublelinkedlistassign : 44
doublelinkedlistdeclaration : 5
doublelinkedlistexpression : 45
empty                : 19 24 28 72
endexpression        : 29 31 33 35 37 39 41 43 45 47 49 51 53 55
expression           : 55 57 57 58 58 59 59 60 60 61 61 64 64 65 66 67 68 69 70
finalstatvar         : 29 30 31 32 35 36 39 40 43 44 47 48 51 52
greatthandat         : 35
lessthandat          : 35
linkedlistassign     : 40
linkedlistdeclaration : 4
linkedlistexpression : 41
listassign           : 32
listdeclaration      : 2
listexpression       : 33
program              : 0
queueassign          : 52
queuedeclaration     : 7
queueexpression      : 53
stackassign          : 48
stackdeclaration     : 6
stackexpression      : 49

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration
    (2) program -> . listdeclaration
    (3) program -> . arraydeclaration
    (4) program -> . linkedlistdeclaration
    (5) program -> . doublelinkedlistdeclaration
    (6) program -> . stackdeclaration
    (7) program -> . queuedeclaration
    (29) declaration -> . accessmodif finalstatvar Type STRING endexpression
    (30) declaration -> . accessmodif finalstatvar Type assign
    (31) listdeclaration -> . accessmodif finalstatvar LIST GREATTHAN Type LESSTHAN STRING endexpression
    (32) listdeclaration -> . accessmodif finalstatvar LIST GREATTHAN Type LESSTHAN listassign
    (35) arraydeclaration -> . accessmodif finalstatvar ARRAYLIST lessthandat Type greatthandat ESPACIO STRING endexpression
    (36) arraydeclaration -> . accessmodif finalstatvar ARRAYLIST LESSTHAN Type GREATTHAN arrayassign
    (39) linkedlistdeclaration -> . accessmodif finalstatvar LINKEDLIST LESSTHAN Type GREATTHAN STRING endexpression
    (40) linkedlistdeclaration -> . accessmodif finalstatvar LINKEDLIST LESSTHAN Type GREATTHAN linkedlistassign
    (43) doublelinkedlistdeclaration -> . accessmodif finalstatvar DOUBLELINKEDLIST LESSTHAN Type GREATTHAN STRING endexpression
    (44) doublelinkedlistdeclaration -> . accessmodif finalstatvar DOUBLELINKEDLIST LESSTHAN Type GREATTHAN doublelinkedlistassign
    (47) stackdeclaration -> . accessmodif finalstatvar STACK LESSTHAN Type GREATTHAN STRING endexpression
    (48) stackdeclaration -> . accessmodif finalstatvar STACK LESSTHAN Type GREATTHAN stackassign
    (51) queuedeclaration -> . accessmodif finalstatvar QUEUE GREATTHAN Type LESSTHAN STRING endexpression
    (52) queuedeclaration -> . accessmodif finalstatvar QUEUE GREATTHAN Type LESSTHAN queueassign
    (20) accessmodif -> . PUBLIC
    (21) accessmodif -> . PRIVATE
    (22) accessmodif -> . PROTECTED
    (23) accessmodif -> . DEFAULT
    (24) accessmodif -> . empty
    (75) empty -> .

  ! shift/reduce conflict for PUBLIC resolved as shift
  ! shift/reduce conflict for PRIVATE resolved as shift
  ! shift/reduce conflict for PROTECTED resolved as shift
  ! shift/reduce conflict for DEFAULT resolved as shift
    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 11
    PROTECTED       shift and go to state 12
    DEFAULT         shift and go to state 13
    FINAL           reduce using rule 75 (empty -> .)
    STATIC          reduce using rule 75 (empty -> .)
    LIST            reduce using rule 75 (empty -> .)
    ARRAYLIST       reduce using rule 75 (empty -> .)
    LINKEDLIST      reduce using rule 75 (empty -> .)
    DOUBLELINKEDLIST reduce using rule 75 (empty -> .)
    STACK           reduce using rule 75 (empty -> .)
    QUEUE           reduce using rule 75 (empty -> .)
    INT             reduce using rule 75 (empty -> .)
    BOOLEAN         reduce using rule 75 (empty -> .)
    STRING          reduce using rule 75 (empty -> .)
    SHORT           reduce using rule 75 (empty -> .)
    FLOAT           reduce using rule 75 (empty -> .)
    LONG            reduce using rule 75 (empty -> .)
    DOUBLE          reduce using rule 75 (empty -> .)
    CHAR            reduce using rule 75 (empty -> .)
    BYTE            reduce using rule 75 (empty -> .)
    OBJECT          reduce using rule 75 (empty -> .)

  ! PUBLIC          [ reduce using rule 75 (empty -> .) ]
  ! PRIVATE         [ reduce using rule 75 (empty -> .) ]
  ! PROTECTED       [ reduce using rule 75 (empty -> .) ]
  ! DEFAULT         [ reduce using rule 75 (empty -> .) ]

    program                        shift and go to state 1
    declaration                    shift and go to state 2
    listdeclaration                shift and go to state 3
    arraydeclaration               shift and go to state 4
    linkedlistdeclaration          shift and go to state 5
    doublelinkedlistdeclaration    shift and go to state 6
    stackdeclaration               shift and go to state 7
    queuedeclaration               shift and go to state 8
    accessmodif                    shift and go to state 9
    empty                          shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration .

    $end            reduce using rule 1 (program -> declaration .)


state 3

    (2) program -> listdeclaration .

    $end            reduce using rule 2 (program -> listdeclaration .)


state 4

    (3) program -> arraydeclaration .

    $end            reduce using rule 3 (program -> arraydeclaration .)


state 5

    (4) program -> linkedlistdeclaration .

    $end            reduce using rule 4 (program -> linkedlistdeclaration .)


state 6

    (5) program -> doublelinkedlistdeclaration .

    $end            reduce using rule 5 (program -> doublelinkedlistdeclaration .)


state 7

    (6) program -> stackdeclaration .

    $end            reduce using rule 6 (program -> stackdeclaration .)


state 8

    (7) program -> queuedeclaration .

    $end            reduce using rule 7 (program -> queuedeclaration .)


state 9

    (29) declaration -> accessmodif . finalstatvar Type STRING endexpression
    (30) declaration -> accessmodif . finalstatvar Type assign
    (31) listdeclaration -> accessmodif . finalstatvar LIST GREATTHAN Type LESSTHAN STRING endexpression
    (32) listdeclaration -> accessmodif . finalstatvar LIST GREATTHAN Type LESSTHAN listassign
    (35) arraydeclaration -> accessmodif . finalstatvar ARRAYLIST lessthandat Type greatthandat ESPACIO STRING endexpression
    (36) arraydeclaration -> accessmodif . finalstatvar ARRAYLIST LESSTHAN Type GREATTHAN arrayassign
    (39) linkedlistdeclaration -> accessmodif . finalstatvar LINKEDLIST LESSTHAN Type GREATTHAN STRING endexpression
    (40) linkedlistdeclaration -> accessmodif . finalstatvar LINKEDLIST LESSTHAN Type GREATTHAN linkedlistassign
    (43) doublelinkedlistdeclaration -> accessmodif . finalstatvar DOUBLELINKEDLIST LESSTHAN Type GREATTHAN STRING endexpression
    (44) doublelinkedlistdeclaration -> accessmodif . finalstatvar DOUBLELINKEDLIST LESSTHAN Type GREATTHAN doublelinkedlistassign
    (47) stackdeclaration -> accessmodif . finalstatvar STACK LESSTHAN Type GREATTHAN STRING endexpression
    (48) stackdeclaration -> accessmodif . finalstatvar STACK LESSTHAN Type GREATTHAN stackassign
    (51) queuedeclaration -> accessmodif . finalstatvar QUEUE GREATTHAN Type LESSTHAN STRING endexpression
    (52) queuedeclaration -> accessmodif . finalstatvar QUEUE GREATTHAN Type LESSTHAN queueassign
    (25) finalstatvar -> . FINAL
    (26) finalstatvar -> . STATIC
    (27) finalstatvar -> . FINAL STATIC
    (28) finalstatvar -> . empty
    (75) empty -> .

  ! shift/reduce conflict for FINAL resolved as shift
  ! shift/reduce conflict for STATIC resolved as shift
    FINAL           shift and go to state 16
    STATIC          shift and go to state 17
    LIST            reduce using rule 75 (empty -> .)
    ARRAYLIST       reduce using rule 75 (empty -> .)
    LINKEDLIST      reduce using rule 75 (empty -> .)
    DOUBLELINKEDLIST reduce using rule 75 (empty -> .)
    STACK           reduce using rule 75 (empty -> .)
    QUEUE           reduce using rule 75 (empty -> .)
    INT             reduce using rule 75 (empty -> .)
    BOOLEAN         reduce using rule 75 (empty -> .)
    STRING          reduce using rule 75 (empty -> .)
    SHORT           reduce using rule 75 (empty -> .)
    FLOAT           reduce using rule 75 (empty -> .)
    LONG            reduce using rule 75 (empty -> .)
    DOUBLE          reduce using rule 75 (empty -> .)
    CHAR            reduce using rule 75 (empty -> .)
    BYTE            reduce using rule 75 (empty -> .)
    OBJECT          reduce using rule 75 (empty -> .)
    PUBLIC          reduce using rule 75 (empty -> .)
    PRIVATE         reduce using rule 75 (empty -> .)
    PROTECTED       reduce using rule 75 (empty -> .)
    DEFAULT         reduce using rule 75 (empty -> .)

  ! FINAL           [ reduce using rule 75 (empty -> .) ]
  ! STATIC          [ reduce using rule 75 (empty -> .) ]

    finalstatvar                   shift and go to state 15
    empty                          shift and go to state 18

state 10

    (20) accessmodif -> PUBLIC .

    FINAL           reduce using rule 20 (accessmodif -> PUBLIC .)
    STATIC          reduce using rule 20 (accessmodif -> PUBLIC .)
    LIST            reduce using rule 20 (accessmodif -> PUBLIC .)
    ARRAYLIST       reduce using rule 20 (accessmodif -> PUBLIC .)
    LINKEDLIST      reduce using rule 20 (accessmodif -> PUBLIC .)
    DOUBLELINKEDLIST reduce using rule 20 (accessmodif -> PUBLIC .)
    STACK           reduce using rule 20 (accessmodif -> PUBLIC .)
    QUEUE           reduce using rule 20 (accessmodif -> PUBLIC .)
    INT             reduce using rule 20 (accessmodif -> PUBLIC .)
    BOOLEAN         reduce using rule 20 (accessmodif -> PUBLIC .)
    STRING          reduce using rule 20 (accessmodif -> PUBLIC .)
    SHORT           reduce using rule 20 (accessmodif -> PUBLIC .)
    FLOAT           reduce using rule 20 (accessmodif -> PUBLIC .)
    LONG            reduce using rule 20 (accessmodif -> PUBLIC .)
    DOUBLE          reduce using rule 20 (accessmodif -> PUBLIC .)
    CHAR            reduce using rule 20 (accessmodif -> PUBLIC .)
    BYTE            reduce using rule 20 (accessmodif -> PUBLIC .)
    OBJECT          reduce using rule 20 (accessmodif -> PUBLIC .)
    PUBLIC          reduce using rule 20 (accessmodif -> PUBLIC .)
    PRIVATE         reduce using rule 20 (accessmodif -> PUBLIC .)
    PROTECTED       reduce using rule 20 (accessmodif -> PUBLIC .)
    DEFAULT         reduce using rule 20 (accessmodif -> PUBLIC .)


state 11

    (21) accessmodif -> PRIVATE .

    FINAL           reduce using rule 21 (accessmodif -> PRIVATE .)
    STATIC          reduce using rule 21 (accessmodif -> PRIVATE .)
    LIST            reduce using rule 21 (accessmodif -> PRIVATE .)
    ARRAYLIST       reduce using rule 21 (accessmodif -> PRIVATE .)
    LINKEDLIST      reduce using rule 21 (accessmodif -> PRIVATE .)
    DOUBLELINKEDLIST reduce using rule 21 (accessmodif -> PRIVATE .)
    STACK           reduce using rule 21 (accessmodif -> PRIVATE .)
    QUEUE           reduce using rule 21 (accessmodif -> PRIVATE .)
    INT             reduce using rule 21 (accessmodif -> PRIVATE .)
    BOOLEAN         reduce using rule 21 (accessmodif -> PRIVATE .)
    STRING          reduce using rule 21 (accessmodif -> PRIVATE .)
    SHORT           reduce using rule 21 (accessmodif -> PRIVATE .)
    FLOAT           reduce using rule 21 (accessmodif -> PRIVATE .)
    LONG            reduce using rule 21 (accessmodif -> PRIVATE .)
    DOUBLE          reduce using rule 21 (accessmodif -> PRIVATE .)
    CHAR            reduce using rule 21 (accessmodif -> PRIVATE .)
    BYTE            reduce using rule 21 (accessmodif -> PRIVATE .)
    OBJECT          reduce using rule 21 (accessmodif -> PRIVATE .)
    PUBLIC          reduce using rule 21 (accessmodif -> PRIVATE .)
    PRIVATE         reduce using rule 21 (accessmodif -> PRIVATE .)
    PROTECTED       reduce using rule 21 (accessmodif -> PRIVATE .)
    DEFAULT         reduce using rule 21 (accessmodif -> PRIVATE .)


state 12

    (22) accessmodif -> PROTECTED .

    FINAL           reduce using rule 22 (accessmodif -> PROTECTED .)
    STATIC          reduce using rule 22 (accessmodif -> PROTECTED .)
    LIST            reduce using rule 22 (accessmodif -> PROTECTED .)
    ARRAYLIST       reduce using rule 22 (accessmodif -> PROTECTED .)
    LINKEDLIST      reduce using rule 22 (accessmodif -> PROTECTED .)
    DOUBLELINKEDLIST reduce using rule 22 (accessmodif -> PROTECTED .)
    STACK           reduce using rule 22 (accessmodif -> PROTECTED .)
    QUEUE           reduce using rule 22 (accessmodif -> PROTECTED .)
    INT             reduce using rule 22 (accessmodif -> PROTECTED .)
    BOOLEAN         reduce using rule 22 (accessmodif -> PROTECTED .)
    STRING          reduce using rule 22 (accessmodif -> PROTECTED .)
    SHORT           reduce using rule 22 (accessmodif -> PROTECTED .)
    FLOAT           reduce using rule 22 (accessmodif -> PROTECTED .)
    LONG            reduce using rule 22 (accessmodif -> PROTECTED .)
    DOUBLE          reduce using rule 22 (accessmodif -> PROTECTED .)
    CHAR            reduce using rule 22 (accessmodif -> PROTECTED .)
    BYTE            reduce using rule 22 (accessmodif -> PROTECTED .)
    OBJECT          reduce using rule 22 (accessmodif -> PROTECTED .)
    PUBLIC          reduce using rule 22 (accessmodif -> PROTECTED .)
    PRIVATE         reduce using rule 22 (accessmodif -> PROTECTED .)
    PROTECTED       reduce using rule 22 (accessmodif -> PROTECTED .)
    DEFAULT         reduce using rule 22 (accessmodif -> PROTECTED .)


state 13

    (23) accessmodif -> DEFAULT .

    FINAL           reduce using rule 23 (accessmodif -> DEFAULT .)
    STATIC          reduce using rule 23 (accessmodif -> DEFAULT .)
    LIST            reduce using rule 23 (accessmodif -> DEFAULT .)
    ARRAYLIST       reduce using rule 23 (accessmodif -> DEFAULT .)
    LINKEDLIST      reduce using rule 23 (accessmodif -> DEFAULT .)
    DOUBLELINKEDLIST reduce using rule 23 (accessmodif -> DEFAULT .)
    STACK           reduce using rule 23 (accessmodif -> DEFAULT .)
    QUEUE           reduce using rule 23 (accessmodif -> DEFAULT .)
    INT             reduce using rule 23 (accessmodif -> DEFAULT .)
    BOOLEAN         reduce using rule 23 (accessmodif -> DEFAULT .)
    STRING          reduce using rule 23 (accessmodif -> DEFAULT .)
    SHORT           reduce using rule 23 (accessmodif -> DEFAULT .)
    FLOAT           reduce using rule 23 (accessmodif -> DEFAULT .)
    LONG            reduce using rule 23 (accessmodif -> DEFAULT .)
    DOUBLE          reduce using rule 23 (accessmodif -> DEFAULT .)
    CHAR            reduce using rule 23 (accessmodif -> DEFAULT .)
    BYTE            reduce using rule 23 (accessmodif -> DEFAULT .)
    OBJECT          reduce using rule 23 (accessmodif -> DEFAULT .)
    PUBLIC          reduce using rule 23 (accessmodif -> DEFAULT .)
    PRIVATE         reduce using rule 23 (accessmodif -> DEFAULT .)
    PROTECTED       reduce using rule 23 (accessmodif -> DEFAULT .)
    DEFAULT         reduce using rule 23 (accessmodif -> DEFAULT .)


state 14

    (24) accessmodif -> empty .

    FINAL           reduce using rule 24 (accessmodif -> empty .)
    STATIC          reduce using rule 24 (accessmodif -> empty .)
    LIST            reduce using rule 24 (accessmodif -> empty .)
    ARRAYLIST       reduce using rule 24 (accessmodif -> empty .)
    LINKEDLIST      reduce using rule 24 (accessmodif -> empty .)
    DOUBLELINKEDLIST reduce using rule 24 (accessmodif -> empty .)
    STACK           reduce using rule 24 (accessmodif -> empty .)
    QUEUE           reduce using rule 24 (accessmodif -> empty .)
    INT             reduce using rule 24 (accessmodif -> empty .)
    BOOLEAN         reduce using rule 24 (accessmodif -> empty .)
    STRING          reduce using rule 24 (accessmodif -> empty .)
    SHORT           reduce using rule 24 (accessmodif -> empty .)
    FLOAT           reduce using rule 24 (accessmodif -> empty .)
    LONG            reduce using rule 24 (accessmodif -> empty .)
    DOUBLE          reduce using rule 24 (accessmodif -> empty .)
    CHAR            reduce using rule 24 (accessmodif -> empty .)
    BYTE            reduce using rule 24 (accessmodif -> empty .)
    OBJECT          reduce using rule 24 (accessmodif -> empty .)
    PUBLIC          reduce using rule 24 (accessmodif -> empty .)
    PRIVATE         reduce using rule 24 (accessmodif -> empty .)
    PROTECTED       reduce using rule 24 (accessmodif -> empty .)
    DEFAULT         reduce using rule 24 (accessmodif -> empty .)


state 15

    (29) declaration -> accessmodif finalstatvar . Type STRING endexpression
    (30) declaration -> accessmodif finalstatvar . Type assign
    (31) listdeclaration -> accessmodif finalstatvar . LIST GREATTHAN Type LESSTHAN STRING endexpression
    (32) listdeclaration -> accessmodif finalstatvar . LIST GREATTHAN Type LESSTHAN listassign
    (35) arraydeclaration -> accessmodif finalstatvar . ARRAYLIST lessthandat Type greatthandat ESPACIO STRING endexpression
    (36) arraydeclaration -> accessmodif finalstatvar . ARRAYLIST LESSTHAN Type GREATTHAN arrayassign
    (39) linkedlistdeclaration -> accessmodif finalstatvar . LINKEDLIST LESSTHAN Type GREATTHAN STRING endexpression
    (40) linkedlistdeclaration -> accessmodif finalstatvar . LINKEDLIST LESSTHAN Type GREATTHAN linkedlistassign
    (43) doublelinkedlistdeclaration -> accessmodif finalstatvar . DOUBLELINKEDLIST LESSTHAN Type GREATTHAN STRING endexpression
    (44) doublelinkedlistdeclaration -> accessmodif finalstatvar . DOUBLELINKEDLIST LESSTHAN Type GREATTHAN doublelinkedlistassign
    (47) stackdeclaration -> accessmodif finalstatvar . STACK LESSTHAN Type GREATTHAN STRING endexpression
    (48) stackdeclaration -> accessmodif finalstatvar . STACK LESSTHAN Type GREATTHAN stackassign
    (51) queuedeclaration -> accessmodif finalstatvar . QUEUE GREATTHAN Type LESSTHAN STRING endexpression
    (52) queuedeclaration -> accessmodif finalstatvar . QUEUE GREATTHAN Type LESSTHAN queueassign
    (8) Type -> . INT
    (9) Type -> . BOOLEAN
    (10) Type -> . STRING
    (11) Type -> . SHORT
    (12) Type -> . FLOAT
    (13) Type -> . LONG
    (14) Type -> . DOUBLE
    (15) Type -> . CHAR
    (16) Type -> . BYTE
    (17) Type -> . OBJECT
    (18) Type -> . arraydeclaration
    (19) Type -> . empty
    (35) arraydeclaration -> . accessmodif finalstatvar ARRAYLIST lessthandat Type greatthandat ESPACIO STRING endexpression
    (36) arraydeclaration -> . accessmodif finalstatvar ARRAYLIST LESSTHAN Type GREATTHAN arrayassign
    (75) empty -> .
    (20) accessmodif -> . PUBLIC
    (21) accessmodif -> . PRIVATE
    (22) accessmodif -> . PROTECTED
    (23) accessmodif -> . DEFAULT
    (24) accessmodif -> . empty

  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for ARRAYLIST resolved as shift
    LIST            shift and go to state 22
    ARRAYLIST       shift and go to state 23
    LINKEDLIST      shift and go to state 24
    DOUBLELINKEDLIST shift and go to state 25
    STACK           shift and go to state 26
    QUEUE           shift and go to state 27
    INT             shift and go to state 28
    BOOLEAN         shift and go to state 29
    STRING          shift and go to state 21
    SHORT           shift and go to state 30
    FLOAT           shift and go to state 31
    LONG            shift and go to state 32
    DOUBLE          shift and go to state 33
    CHAR            shift and go to state 34
    BYTE            shift and go to state 35
    OBJECT          shift and go to state 36
    FINAL           reduce using rule 75 (empty -> .)
    STATIC          reduce using rule 75 (empty -> .)
    PUBLIC          shift and go to state 10
    PRIVATE         shift and go to state 11
    PROTECTED       shift and go to state 12
    DEFAULT         shift and go to state 13

  ! STRING          [ reduce using rule 75 (empty -> .) ]
  ! ARRAYLIST       [ reduce using rule 75 (empty -> .) ]

    accessmodif                    shift and go to state 19
    Type                           shift and go to state 20
    arraydeclaration               shift and go to state 37
    empty                          shift and go to state 38

state 16

    (25) finalstatvar -> FINAL .
    (27) finalstatvar -> FINAL . STATIC

  ! shift/reduce conflict for STATIC resolved as shift
    LIST            reduce using rule 25 (finalstatvar -> FINAL .)
    ARRAYLIST       reduce using rule 25 (finalstatvar -> FINAL .)
    LINKEDLIST      reduce using rule 25 (finalstatvar -> FINAL .)
    DOUBLELINKEDLIST reduce using rule 25 (finalstatvar -> FINAL .)
    STACK           reduce using rule 25 (finalstatvar -> FINAL .)
    QUEUE           reduce using rule 25 (finalstatvar -> FINAL .)
    INT             reduce using rule 25 (finalstatvar -> FINAL .)
    BOOLEAN         reduce using rule 25 (finalstatvar -> FINAL .)
    STRING          reduce using rule 25 (finalstatvar -> FINAL .)
    SHORT           reduce using rule 25 (finalstatvar -> FINAL .)
    FLOAT           reduce using rule 25 (finalstatvar -> FINAL .)
    LONG            reduce using rule 25 (finalstatvar -> FINAL .)
    DOUBLE          reduce using rule 25 (finalstatvar -> FINAL .)
    CHAR            reduce using rule 25 (finalstatvar -> FINAL .)
    BYTE            reduce using rule 25 (finalstatvar -> FINAL .)
    OBJECT          reduce using rule 25 (finalstatvar -> FINAL .)
    PUBLIC          reduce using rule 25 (finalstatvar -> FINAL .)
    PRIVATE         reduce using rule 25 (finalstatvar -> FINAL .)
    PROTECTED       reduce using rule 25 (finalstatvar -> FINAL .)
    DEFAULT         reduce using rule 25 (finalstatvar -> FINAL .)
    FINAL           reduce using rule 25 (finalstatvar -> FINAL .)
    STATIC          shift and go to state 39

  ! STATIC          [ reduce using rule 25 (finalstatvar -> FINAL .) ]


state 17

    (26) finalstatvar -> STATIC .

    LIST            reduce using rule 26 (finalstatvar -> STATIC .)
    ARRAYLIST       reduce using rule 26 (finalstatvar -> STATIC .)
    LINKEDLIST      reduce using rule 26 (finalstatvar -> STATIC .)
    DOUBLELINKEDLIST reduce using rule 26 (finalstatvar -> STATIC .)
    STACK           reduce using rule 26 (finalstatvar -> STATIC .)
    QUEUE           reduce using rule 26 (finalstatvar -> STATIC .)
    INT             reduce using rule 26 (finalstatvar -> STATIC .)
    BOOLEAN         reduce using rule 26 (finalstatvar -> STATIC .)
    STRING          reduce using rule 26 (finalstatvar -> STATIC .)
    SHORT           reduce using rule 26 (finalstatvar -> STATIC .)
    FLOAT           reduce using rule 26 (finalstatvar -> STATIC .)
    LONG            reduce using rule 26 (finalstatvar -> STATIC .)
    DOUBLE          reduce using rule 26 (finalstatvar -> STATIC .)
    CHAR            reduce using rule 26 (finalstatvar -> STATIC .)
    BYTE            reduce using rule 26 (finalstatvar -> STATIC .)
    OBJECT          reduce using rule 26 (finalstatvar -> STATIC .)
    PUBLIC          reduce using rule 26 (finalstatvar -> STATIC .)
    PRIVATE         reduce using rule 26 (finalstatvar -> STATIC .)
    PROTECTED       reduce using rule 26 (finalstatvar -> STATIC .)
    DEFAULT         reduce using rule 26 (finalstatvar -> STATIC .)
    FINAL           reduce using rule 26 (finalstatvar -> STATIC .)
    STATIC          reduce using rule 26 (finalstatvar -> STATIC .)


state 18

    (28) finalstatvar -> empty .
